       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include Document.open() and some DOM properties


Revision History:
 7-Nov-2002
Acknowledgements:
    Thanks to Raul Benito Garcia for pointing out the problem with no-action forms accessed with URL parameters
Problems fixed:
    1. When a form obtained using parameters as part of the URL has no action, those parameters are now sent
       as part of the form submission.

 6-Nov-2002
Problems fixed:
    1. Simply removing the NekoHTML parser jar from the classpath was not enough to re-enable JTidy. Now it is.

 5-Nov-2002
Acknowledgements:
    Thanks to Troy Waldrep for pointing out the non-standard Refresh header definition accepted in popular browsers

Additions:
    1. Added support for the Refresh header

 4-Nov-2002
Acknowledgements:
    Thanks to Geert Bevin for fixing a problem with comparing cookies

Problems Fixed:
    1. Adding both a "global" cookie and a server-based cookie with the same name causes a NullPointerException

 3-Nov-2002 1.5
Acknowledgements:
    Thanks to Ken Corbin for adding tests for disabled and read-only parameters.
    Thanks to Geert Bevin for fixing a problem with generation of cookie headers that affects some servers.
    Thanks to Richard Harris for adding support for the title attribute for links,
           for adding the JavaScript Navigator.platform property,
           for adding Javascript support for the Screen object,
           for pointing out the value of retaining the same ScriptingEngine instance for a ScriptableDelegate,
           for adding stubs for various unimplemented JavaScript Window properties.
           and for finding a case where the handling of JavaScript comments was not working.
    Thanks to Stefan Renz for describing the correct way to set up proxy servers in Java 2 and later.